Added: Vendor and Claimant SVCs to handle registration and Edited registration to call these 2 svcs
